deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-work-3-app-deployment
  labels:
    app: home-work-3-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home-work-3-app
  template:
    metadata:
      labels:
        app: home-work-3-app
    spec:
      restartPolicy: Always
      containers:
        - name: home-work-3-app
          image: ilmirsadykov/otus-home-work-2:home-work-3
          resources:
          ports:
            - name: metrics
              containerPort: 3000
