deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-home-work-2-service
  namespace: otus
spec:
  selector:
    app: otus-home-work-2-app
  ports:
  - port: 3000
    targetPort: 3000
